<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <TextView
        android:id="@+id/open_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aib_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/open_account"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/poi_chkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/document_warning"
        android:layout_below="@+id/document_warning"
        android:layout_marginTop="25dp"
        android:text="@string/poi" />

    <CheckBox
        android:id="@+id/poa_chkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/poi_chkbox"
        android:layout_below="@+id/poi_chkbox"
        android:layout_marginTop="30dp"
        android:text="@string/poa" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/poi_chkbox"
        android:layout_centerHorizontal="true"
        android:text="@string/poi_example"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/poa_chkbox"
        android:text="@string/poa_example"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/aib_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/open_account"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/aib_logo"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/document_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/open_account"
        android:layout_below="@+id/open_account"
        android:layout_marginTop="20dp"
        android:text="@string/document_warning"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>