<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:background="@color/bg_white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin" >
 
    <ImageView
        android:id="@+id/aib_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/aib_logo"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/open_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_account"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/document_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aib_logo"
        android:layout_below="@+id/aib_logo"
        android:layout_marginTop="24dp"
        android:text="@string/document_warning"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    
    <CheckBox
        android:id="@+id/poi_chkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/document_warning"
        android:layout_below="@+id/document_warning"
        android:layout_marginTop="25dp"
        android:text="@string/poi" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poi_example"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/poa_chkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/poi_chkbox"
        android:layout_below="@+id/poi_chkbox"
        android:layout_marginTop="30dp"
        android:text="@string/poa" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/poa_chkbox"
        android:text="@string/poa_example"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>