<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accountTypeTitle"
        android:layout_below="@+id/accountTypeTitle" >

        <RadioButton
            android:id="@+id/personalBankAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/personal_bank_account" />

        <RadioButton
            android:id="@+id/studentBankAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_bank_account" />
    </RadioGroup>

    <Switch
        android:id="@+id/termsDebitCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="25dp"
        android:checked="false"
        android:text="@string/terms_acceptance"
        android:textOff="NO"
        android:textOn="YES" />

    <TextView
        android:id="@+id/accountTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/account_type_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Switch
        android:id="@+id/termsEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/termsDebitCard"
        android:layout_below="@+id/termsDebitCard"
        android:checked="true"
        android:text="@string/terms_email"
        android:textOff="NO"
        android:textOn="YES" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/next" />

</RelativeLayout>

</ScrollView>