<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Signature" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/complete"
            android:layout_marginTop="20dp" />

                        <Button
                            android:id="@+id/next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentRight="true"
                            android:text="@string/next" />

                        <TextView
                            android:id="@+id/complete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:text="@string/step_five"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <Switch
                            android:id="@+id/termsInternetBanking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/imageView1"
                            android:layout_below="@+id/imageView1"
                            android:checked="true"
                            android:text="@string/terms_internetbanking"
                            android:textOff="NO"
                            android:textOn="YES" />

                        <Switch
                            android:id="@+id/termsDebitCard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/termsInternetBanking"
                            android:layout_below="@+id/termsInternetBanking"
                            android:checked="true"
                            android:text="@string/terms_debitcard"
                            android:textOff="NO"
                            android:textOn="YES" />
    
</RelativeLayout>